Move Version to internal pkgs

--- a/community/kernel/ComponentVersion.tmpl
+++ b/community/kernel/ComponentVersion.tmpl
@@ -1,6 +1,6 @@
 package org.neo4j.kernel.impl;
 
-import org.neo4j.kernel.Version;
+import org.neo4j.kernel.internal.Version;
 import org.neo4j.helpers.Service;
 
 @Service.Implementation(Version.class)
